2004-11-27  James Henstridge  <james@jamesh.id.au>

	* Makefile.am: fix build rules for Nautilus stuff.

	* fontilus-context-menu.c: convert to a Nautilus extension.

2004-10-14  Jody Goldberg <jody@gnome.org>

	* Release 2.8.1

2004-05-16  Jody Goldberg <jody@gnome.org>

	http://bugzilla.gnome.org/show_bug.cgi?id=140342
	* font-view.c (main) : patched to use argv[0] rather than hard coding
	  things.  Additionally marked the string for translation.

2004-04-15  Jody Goldberg <jody@gnome.org>

	* Release 2.6.1

2004-04-01  Jody Goldberg <jody@gnome.org>

	* Release 2.6.0.3

2004-03-30  Jody Goldberg <jody@gnome.org>

	* Release 2.6.0.1

2004-03-23  Jody Goldberg <jody@gnome.org>

	* Release 2.6.0

2004-03-11  Jody Goldberg <jody@gnome.org>

	* Release 2.5.4

2004-02-16  Jody Goldberg <jody@gnome.org>

	http://bugzilla.gnome.org/show_bug.cgi?id=134389
	* Makefile.am : Patch from jmmv@menta.net (Julio M. Merino Vidal)
	  to honour the standard schema install flags.
	  I've extended the patch to support builddir != srcdir too

2004-02-13  Jody Goldberg <jody@gnome.org>

	* Release 2.5.3

2004-02-10  James Henstridge  <james@daa.com.au>

	* font-method.c (fill_file_info): clear the SYMBOLIC_LINK flag if
	present on the file_info struct.  Since gnome-vfs doesn't support
	cross-vfs symlinks, the symlink would no longer resolve when
	returned by the fonts:/// method.  Fixes bug #133811.

2004-01-14  Jody Goldberg <jody@gnome.org>

	* Release 2.5.2

2003-12-30  Jody Goldberg <jody@gnome.org>

	* Release 2.5.1.1

2003-12-30  Jody Goldberg <jody@gnome.org>

	* Release 2.5.1

2003-10-28  Jody Goldberg <jody@gnome.org>

	* Release 2.5.0

2003-07-07  Jody Goldberg <jody@gnome.org>

	* Release 2.3.4

2003-06-24  Jody Goldberg <jody@gnome.org>

	* Release 2.3.3

2003-05-19  Dmitry G. Mastrukov  <dmitry@taurussoft.org>

	* configure.in: Added Russian to ALL_LINGUAS.

2003-05-06  Danilo Šegan  <dsegan@gmx.net>

	* configure.in: Added "sr" and "sr@Latn" to ALL_LINGUAS.
