@@ -564,6 +564,7 @@ vfs-methods/themus/Makefile
 vfs-methods/fontilus/Makefile
 control-center.spec
 vfs-methods/fontilus/gnome-font-viewer.desktop.in
+vfs-methods/themus/themus-theme-applier.desktop.in
 capplets/font/font-properties.desktop.in
 capplets/keybindings/keybinding.desktop.in
 capplets/display/display-properties.desktop.in
