@@ -101,7 +101,6 @@ typing-break/drwright.c
 typing-break/main.c
 vfs-methods/fontilus/fontilus-context-menu.c
 vfs-methods/fontilus/fontilus.schemas.in
-vfs-methods/fontilus/fontilus.server.in.in
 vfs-methods/fontilus/font-view.c
 vfs-methods/fontilus/gnome-font-viewer.desktop.in.in
 vfs-methods/themus/apply-font.glade
@@ -109,6 +108,6 @@ vfs-methods/themus/theme-method.c
 vfs-methods/themus/theme-method.directory.in
 vfs-methods/themus/themus-properties-main.c
 vfs-methods/themus/themus-properties-view.c
-vfs-methods/themus/Themus_Properties_View.server.in.in
 vfs-methods/themus/themus.schemas.in
 vfs-methods/themus/themus-theme-applier.c
+vfs-methods/themus/themus-theme-applier.desktop.in.in
