@@ -1,8 +1,0 @@
-gnome-font-viewer
-	command=gnome-font-viewer
-	name=GNOME Font Viewer
-	can_open_multiple_files=false
-	expects_uris=true
-	requires_terminal=false
-	supported_uri_schemes=file,fonts
-	mime_types=application/x-font-pcf,application/x-font-ttf,application/x-font-type1,application/x-font-otf
