@@ -1,5 +1,0 @@
-application/x-font-pcf:
-	regex,2: pcf\.gz$
-
-application/x-font-ttf:
-	ext: ttc TTC
