@@ -3,13 +3,13 @@ Encoding=UTF-8
 _Name=GNOME Font Viewer
 _Comment=The GNOME configuration tool
 Icon=gnome-settings-font
-Exec=gnome-font-viewer
+Exec=gnome-font-viewer %U
 Terminal=false
 Type=Application
 StartupNotify=true
 NoDisplay=true
+MimeType=application/x-font-ttf;application/x-font-pcf;application/x-font-type1;application/x-font-otf;
 X-GNOME-Bugzilla-Bugzilla=GNOME
 X-GNOME-Bugzilla-Product=control-center
 X-GNOME-Bugzilla-Component=font properties
-MimeType=application/x-font-ttf;application/x-font-pcf;application/x-font-type1;application/x-font-otf;
 X-GNOME-Bugzilla-Version=@VERSION@
