@@ -1,10 +1,8 @@
 Makefile
 Makefile.in
-Themus_Component.server
-Themus_Component.server.in
-Themus_Properties_View.server
-Themus_Properties_View.server.in
 gnome-theme-thumbnailer
 theme-method.directory
 themus.schemas
 themus-theme-applier
+themus-theme-applier.desktop
+themus-theme-applier.desktop.in
