@@ -1,0 +1,15 @@
+[Desktop Entry]
+Encoding=UTF-8
+_Name=Apply theme
+_Comment=Sets the default theme
+Icon=gnome-settings-theme
+Exec=themus-theme-applier %U
+Terminal=false
+Type=Application
+StartupNotification=false
+NoDisplay=true
+MimeType=application/x-gnome-theme-installed;
+X-GNOME-Bugzilla-Bugzilla=GNOME
+X-GNOME-Bugzilla-Product=control-center
+X-GNOME-Bugzilla-Component=themes:///
+X-GNOME-Bugzilla-Version=@VERSION@
