@@ -1,8 +1,0 @@
-themus-theme-applier
-	command=themus-theme-applier
-	name=Apply theme
-	can_open_multiple_files=false
-	expects_uris=true
-	requires_terminal=false
-	supported_uri_schemes=themes
-	mime_types=application/x-gnome-theme-installed
