@@ -1,6 +1,0 @@
-application/x-gnome-theme-installed
-	default_action_type=application
-	default_application_id=themus-theme-applier
-	short_list_application_ids_for_novice_user_level=themus-theme-applier
-	short_list_application_ids_for_intermediate_user_level=themus-theme-applier
-	short_list_application_ids_for_advanced_user_level=themus-theme-applier
