@@ -1,5 +1,11 @@
 2004-11-27  James Henstridge  <james@jamesh.id.au>
 
+	* themus.applications, themus.keys: remove.
+
+	* themus-theme-applier.desktop.in.in: new file to hook up
+	themus-apply-theme, since the old .applications file isn't used by
+	the new MIME system.
+
 	* themus-theme-applier.c: get rid of the bonobo includes.
 
 	* Makefile.am: update to install Nautilus extension.
