@@ -1,5 +1,11 @@
 2004-11-27  James Henstridge  <james@jamesh.id.au>
 
+	* Makefile.am: get rid of old mime stuff.
+
+	* gnome-font-viewer.desktop.in.in (Exec): add a "%U" to the
+	command line, so Nautilus will run gnome-font-viewer for stuff
+	under the fonts:/// URI.
+
 	* Makefile.am: fix build rules for Nautilus stuff.
 
 	* fontilus-context-menu.c: convert to a Nautilus extension.
